syntax = "proto3";

package orc.v1;

import "google/protobuf/timestamp.proto";
import "orc/v1/common.proto";

option go_package = "github.com/randalmurphal/orc/gen/proto/orc/v1;orcv1";

// =============================================================================
// ENUMS
// =============================================================================

// Knowledge entry type
enum KnowledgeType {
  KNOWLEDGE_TYPE_UNSPECIFIED = 0;
  KNOWLEDGE_TYPE_PATTERN = 1;   // Code pattern
  KNOWLEDGE_TYPE_GOTCHA = 2;    // Gotcha/pitfall
  KNOWLEDGE_TYPE_DECISION = 3;  // Architectural decision
}

// Knowledge entry status
enum KnowledgeStatus {
  KNOWLEDGE_STATUS_UNSPECIFIED = 0;
  KNOWLEDGE_STATUS_PENDING = 1;   // Awaiting approval
  KNOWLEDGE_STATUS_APPROVED = 2;  // Approved and active
  KNOWLEDGE_STATUS_REJECTED = 3;  // Rejected
  KNOWLEDGE_STATUS_STALE = 4;     // Needs validation
}

// =============================================================================
// MESSAGES
// =============================================================================

// Knowledge entry
message KnowledgeEntry {
  // Entry ID
  string id = 1;
  // Entry type
  KnowledgeType type = 2;
  // Name/title
  string name = 3;
  // Description
  string description = 4;
  // Source task that proposed this
  optional string source_task = 5;
  // Who proposed this
  string proposed_by = 6;
  // Current status
  KnowledgeStatus status = 7;
  // Who approved/rejected
  optional string reviewed_by = 8;
  // Review reason
  optional string review_reason = 9;
  // When entry was created
  google.protobuf.Timestamp created_at = 10;
  // When entry was last updated
  google.protobuf.Timestamp updated_at = 11;
  // When entry was last validated
  optional google.protobuf.Timestamp validated_at = 12;
}

// Knowledge status summary
message KnowledgeStatusSummary {
  int32 pending_count = 1;
  int32 approved_count = 2;
  int32 stale_count = 3;
  int32 rejected_count = 4;
}

// =============================================================================
// SERVICE
// =============================================================================

service KnowledgeService {
  // List knowledge entries
  rpc ListKnowledge(ListKnowledgeRequest) returns (ListKnowledgeResponse);

  // Get knowledge status summary
  rpc GetKnowledgeStatus(GetKnowledgeStatusRequest) returns (GetKnowledgeStatusResponse);

  // Get stale entries
  rpc GetStaleEntries(GetStaleEntriesRequest) returns (GetStaleEntriesResponse);

  // Get a knowledge entry
  rpc GetKnowledge(GetKnowledgeRequest) returns (GetKnowledgeResponse);

  // Create a knowledge entry
  rpc CreateKnowledge(CreateKnowledgeRequest) returns (CreateKnowledgeResponse);

  // Approve a knowledge entry
  rpc ApproveKnowledge(ApproveKnowledgeRequest) returns (ApproveKnowledgeResponse);

  // Approve all pending entries
  rpc ApproveAllKnowledge(ApproveAllKnowledgeRequest) returns (ApproveAllKnowledgeResponse);

  // Reject a knowledge entry
  rpc RejectKnowledge(RejectKnowledgeRequest) returns (RejectKnowledgeResponse);

  // Validate a knowledge entry
  rpc ValidateKnowledge(ValidateKnowledgeRequest) returns (ValidateKnowledgeResponse);

  // Delete a knowledge entry
  rpc DeleteKnowledge(DeleteKnowledgeRequest) returns (DeleteKnowledgeResponse);
}

// =============================================================================
// REQUEST/RESPONSE MESSAGES
// =============================================================================

message ListKnowledgeRequest {
  PageRequest page = 1;
  // Filter by type
  optional KnowledgeType type = 2;
  // Filter by status
  optional KnowledgeStatus status = 3;
}

message ListKnowledgeResponse {
  repeated KnowledgeEntry entries = 1;
  PageResponse page = 2;
}

message GetKnowledgeStatusRequest {}

message GetKnowledgeStatusResponse {
  KnowledgeStatusSummary status = 1;
}

message GetStaleEntriesRequest {
  // Days since last validation to consider stale
  int32 days = 1;
}

message GetStaleEntriesResponse {
  repeated KnowledgeEntry entries = 1;
}

message GetKnowledgeRequest {
  string id = 1;
}

message GetKnowledgeResponse {
  KnowledgeEntry entry = 1;
}

message CreateKnowledgeRequest {
  KnowledgeType type = 1;
  string name = 2;
  string description = 3;
  optional string source_task = 4;
  string proposed_by = 5;
}

message CreateKnowledgeResponse {
  KnowledgeEntry entry = 1;
}

message ApproveKnowledgeRequest {
  string id = 1;
  optional string reason = 2;
  optional string reviewed_by = 3;
}

message ApproveKnowledgeResponse {
  KnowledgeEntry entry = 1;
}

message ApproveAllKnowledgeRequest {
  optional string reviewed_by = 1;
}

message ApproveAllKnowledgeResponse {
  int32 approved_count = 1;
}

message RejectKnowledgeRequest {
  string id = 1;
  optional string reason = 2;
  optional string reviewed_by = 3;
}

message RejectKnowledgeResponse {
  KnowledgeEntry entry = 1;
}

message ValidateKnowledgeRequest {
  string id = 1;
}

message ValidateKnowledgeResponse {
  KnowledgeEntry entry = 1;
}

message DeleteKnowledgeRequest {
  string id = 1;
}

message DeleteKnowledgeResponse {
  string message = 1;
}
